--- a/ParserTesting/pom.xml
+++ b/ParserTesting/pom.xml
@@ -25,9 +25,15 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-    <dependency> <groupId>com.google.code.javaparser</groupId>
-    <artifactId>javaparser</artifactId>
-    <version>1.0.8</version>
+    <dependency>
+      <groupId>com.google.code.javaparser</groupId>
+      <artifactId>javaparser</artifactId>
+      <version>1.0.8</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>33.2.0-jre</version>
     </dependency>
     <dependency>
     <groupId>com.github.javaparser</groupId>
